syntax="proto3";

package room;

service Room {
    rpc Create(CreateRequest) returns (Status){}
    rpc List(ListRequest) returns (Rooms){}
    rpc Info(UserRoom) returns (RoomInfo){}
    rpc Follow(UserRoom) returns (Status) {}
    rpc Unfollow(UserRoom) returns (Status) {}

    rpc Start(User) returns (BroadcastInfo){}
    rpc End(User) returns (BroadcastInfo){}
    rpc Enter(UserRoom) returns  (Status) {}
    rpc Leave(UserRoom) returns  (Status) {}
}

message Broadcast {
    string ID = 1;
}

message Num {
    string BroadcastID = 1;
    uint32 Num = 2;
}

message CreateRequest {
    string userID = 1;
    string userName = 2;
    string name = 3;
    string cover = 4;
}

message ListRequest {
    int32 num = 1;
    int32 size = 2;
    string search = 3;
}

message RoomInfo {
    string roomID = 1;
    string name = 2;
    string userName = 3; 
    string cover = 4;
    bool isPlaying = 5;
    bool isFollow = 6;
    int64 followNum = 7; 
    BroadcastInfo broadcast = 8;
}

message Rooms {
    repeated RoomInfo rooms = 1;
    int64 totalNum = 2;
}

message User {
    string userID  = 1;
    int32 typeID = 2;
}

message UserRoom {
    int32 typeID = 1;
    string userID = 2;
    string roomID = 3;
    string broadcastID = 4;
    string username= 5;
    int64 level = 6;
}

message Status {
    bool success = 1;
    string roomID = 2;
    string broadcastID = 3;
}

message BroadcastInfo {
    string broadcastID = 1;
    string roomID = 2;
    int64 startTime = 3;
    int64 duration = 4;
    int64 totalAudience = 5;
    int64 currentAudience = 6;
}
